fix layout issue on small screen size, on booking page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,8 @@ h1 {
 }
 
 @media only screen and (max-width: 768px) {
+
+    .container .md-break,
     .md-break {
         display: block;
         width: 100%;
